--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
     "angular-route": "^1.5.0",
     "angular-ui-bootstrap": "^1.2.4",
     "bootstrap": "^3.3.6",
