--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "angular-route": "^1.5.0",
     "angular-ui-bootstrap": "^1.2.4",
     "bootstrap": "^3.3.6",
+    "commonjs-highcharts": "^4.0.3",
+    "highcharts": "^4.2.6",
+    "highcharts-commonjs": "^4.1.7-1",
     "jquery": "^2.2.1",
     "lodash": "^4.15.0",
     "moment": "^2.15.0"
